<resources>
    <string name="app_name">Slice Tracker</string>
    <string name="login">Sign In</string>
    <string name="signOut">Sign Out</string>
    <string name="overview">Slice Overview</string>
    <string name="statsOverview">The Numbers</string>
    <string name="totalTime">Total Print Time: %1$s hours</string>
    <string name="totalMats">Total Materials: %1$s g</string>
    <string name="resin">Resin</string>
    <string name="filament">Filament</string>
    <string name="cancel">Cancel</string>
    <string name="currentCity">Current City: %1$s</string>
    <!-- main page -->
    <string name="resinBaseLayers">Resin Base Layer Cure Time (s)</string>
    <string name="baseCure">Base Cure</string>
    <string name="sliceName">Slice File Name</string>
    <string name="resinLiftSpeed">Lift Speed (mm/s)</string>
    <string name="resinSpeed">Retract Speed (mm/s)</string>
    <string name="resinLiftHeight">Lift Height (mm)</string>
    <string name="numLayers">Number of Layers</string>
    <string name="resLayerThic">Layer Thickness (nm)</string>
    <string name="resCureTime">Layer Cure Time (s)</string>
    <string name="filNozzleThic">Filament Nozzle Thickness</string>
    <string name="filEstTime">Estimated Time (hrs)</string>
    <string name="filEstMat">Estimated Material (g)</string>
    <string name="printer">Printer</string>
    <string name="save">Save</string>
    <string name="selectModel">Model</string>
    <string name="artistName">Artist</string>
    <string name="resinBaseCureTime">Base Cure Time (s)</string>

    <!-- Dialog -->
    <string name="delSure">Are you sure you want to delete this slice?</string>
    <string name="delete">Delete</string>
    <string-array name="matTypeArray">
        <item>PLA</item>
        <item>PLA+</item>
        <item>PETG</item>
        <item>ABS</item>
        <item>Nylon</item>
        <item>Resin</item>
    </string-array>
</resources>