<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newSlice"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:hint="@string/sliceName" />

    <EditText
        android:id="@+id/newEstMat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/filEstMat"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/newEstTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/filEstTime"
        android:inputType="numberDecimal" />

</LinearLayout>