<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:layoutMode="opticalBounds"
    tools:context=".ui.main.MainFragment">

    <EditText
        android:id="@+id/modelName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:ems="9"
        android:hint="@string/selectModel"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliceNameEntry" />

    <EditText
        android:id="@+id/artistName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:ems="9"
        android:hint="@string/artistName"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printer" />

    <EditText
        android:id="@+id/numberOfLayers"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/numLayers"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/estimatedMaterial"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/filEstMat"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filamentEstimatedTime" />

    <EditText
        android:id="@+id/filamentNozzleThickness"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/filNozzleThic"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimatedMaterial" />

    <EditText
        android:id="@+id/filamentEstimatedTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/filEstTime"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfLayers" />

    <EditText
        android:id="@+id/resinBaseLayers"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="244dp"
        android:ems="10"
        android:hint="@string/resinBaseLayers"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resinLayerThickness"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/resLayerThic"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resinLayerCureTime" />

    <EditText
        android:id="@+id/resinLayerCureTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/resCureTime"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resinBaseLayerCureTime" />

    <EditText
        android:id="@+id/resinBaseLayerCureTime"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:ems="9"
        android:hint="@string/resinBaseCureTime"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resinBaseLayers" />

    <EditText
        android:id="@+id/resinLiftHeight"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/resinLiftHeight"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resinLiftSpeed" />

    <EditText
        android:id="@+id/resinLiftSpeed"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/resinLiftSpeed"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resinLayerThickness" />

    <EditText
        android:id="@+id/resinRetractSpeed"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/resinSpeed"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resinLiftHeight" />

    <EditText
        android:id="@+id/printer"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:ems="9"
        android:hint="@string/printer"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/material"
        android:layout_width="393dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="174dp"
        android:checkedButton="@id/resinRadio"
        android:clipChildren="true"
        android:layoutDirection="inherit"
        android:layoutMode="opticalBounds"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/resinRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/resin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/filamentRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/filament"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/resinGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="resinBaseLayerCureTime, resinBaseLayers, resinLayerCureTime,
        resinLiftHeight, resinLiftSpeed, resinRetractSpeed, resinLayerThickness"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="586dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/filamentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="filamentNozzleThickness"
        tools:layout_editor_absoluteX="350dp"
        tools:layout_editor_absoluteY="582dp" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="64dp"
        android:layout_height="65dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/save"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/sliceNameEntry"
        android:layout_width="181dp"
        android:layout_height="28dp"
        android:layout_marginTop="48dp"
        android:completionHint="@string/sliceName"
        app:layout_constraintEnd_toEndOf="@+id/modelName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/modelName"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnSliceSelect"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/delete"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>