<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblSlice"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:text="@string/sliceName" />

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/filEstTime" />

    <TextView
        android:id="@+id/lblMats"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:text="@string/filEstMat" />

</RelativeLayout>