<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.OverviewFragment">

    <ListView
        android:id="@+id/overviewList"
        android:layout_width="wrap_content"
        android:layout_height="446dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/OverviewTitle"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:text="@string/overview"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/StatsOverview"
        android:layout_width="145dp"
        android:layout_height="31dp"
        android:layout_marginBottom="184dp"
        android:text="@string/statsOverview"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/actTotalPrintTime"
        android:layout_width="369dp"
        android:layout_height="43dp"
        android:textSize="18sp"
        android:text="@string/totalTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatsOverview"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/actTotalMaterial"
        android:layout_width="369dp"
        android:layout_height="43dp"
        android:textSize="18sp"
        android:text="@string/totalMats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatsOverview"
        app:layout_constraintVertical_bias="0.435" />

</androidx.constraintlayout.widget.ConstraintLayout>